LIMA-296: Match Comments widget : Manage images in to avoid horizontal scroll (desktop)

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -15867,6 +15867,10 @@ span.glyphicon-star.active {
   padding-left: 15px;
   padding-right: 15px;
 }
+.table.live-commentary tbody tr td.content img {
+  max-width: 100%;
+  height: auto;
+}
 .table.live-commentary tbody tr td.content p {
   font-size: 13px;
   font-weight: 300;
