--- a/compiled/css/style_split_2.css
+++ b/compiled/css/style_split_2.css
@@ -5167,6 +5167,11 @@ span.glyphicon-star.active {
   padding-right: 15px;
 }
 
+.table.live-commentary tbody tr td.content img {
+  max-width: 100%;
+  height: auto;
+}
+
 .table.live-commentary tbody tr td.content p {
   font-size: 13px;
   font-weight: 300;
