--- a/src/css/less/livescore/rules/match-summary/ls-live-commentary.less
+++ b/src/css/less/livescore/rules/match-summary/ls-live-commentary.less
@@ -22,6 +22,12 @@
         }
         
         &.content{
+
+          img{
+            max-width: 100%;
+            height: auto;
+          }
+
           p{
             font-size: @font-size-base;
             font-weight: @font-weight-light;
